--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon instagram" href="" target="_blank" rel="author">
+                        <a class="socialicon instagram" href="https://instagram.com/busby_2?igshid=YmMyMTA2M2Y=" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                                 <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -154,7 +154,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon github" href="" target="_blank" rel="author">
+                        <a class="socialicon github" href="https://github.com/BusbyD?tab=repositories" target="_blank" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
